added api for pictures

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,28 @@
 footer {
-  margin: 60px;
   text-align: center;
 }
 
-.App img {
-  font-size: x-small;
-}
-
 .App-header img {
-  float: left;
-  width: 100px;
+  max-width: 100px;
+  padding: 10px;
 }
 
 .App-header h1 {
   left: 10px;
-  margin: 30px;
+  text-align: center;
+}
+
+.App-header h2 {
+  text-align: center;
+}
+
+.App-header {
+  border: 2px solid red;
+  max-width: 100%;
+}
+
+.container {
+  margin-top: 20px;
+  border: 2px solid red;
+  max-width: 100%;
 }
