--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,10 @@
 .Dictionary {
-  margin: 60px 30px;
+  text-align: center;
+  margin: 20px;
+}
+.container h2 {
+  text-align: center;
+}
+
+.container {
 }
