--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 footer {
+  margin-top: 5px;
   text-align: center;
   font-size: 10px;
 }
@@ -20,7 +21,7 @@ footer {
   max-width: 90%;
   border-radius: 20px;
   background-color: #d2dbc7;
-  margin: 40px;
+  margin: 30px;
   margin-bottom: 20px;
 }
 
@@ -36,4 +37,7 @@ footer {
 
 .dots {
   font-size: 40px;
+}
+.App .conatiner {
+  box-shadow: black;
 }
